# remote-dev

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ge/: edit_getting_started_expectation_suite_taxi.demo.ipynb  edit_nh_demo.gsod2017.warning.ipynb
ge/great_expectations/: bq_test.ipynb  great_expectations.yml
ge/great_expectations/expectations/: .ge_store_backend_id  bq_suite.json  test_suite.json
ge/great_expectations/expectations/getting_started_expectation_suite_taxi/: demo.json
ge/great_expectations/expectations/nh_demo/gsod2017/: warning.json
