[tool.poetry]
name = "may-demo"
version = "0.1.0"
description = "Doing some basic work to show CICD and fun statistics"
authors = ["Charlie Morn <charlie.morn@northhighland.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.4.2"
ipython = "^8.3.0"
SQLAlchemy = "^1.4.27"
pyodbc = "^4.0.32"
sqlalchemy-bigquery = "^1.4.3"
pybigquery = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "22.3.0"
coverage = "6.3.2"
databricks-cli = "0.16.6"
mypy = "0.942"
pylint = "2.13.5"
pytest = "7.1.1"
types-tabulate = "0.8.7"
great-expectations = "0.15.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
